deployment/manifest/spring_app_v2/02-rmq-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring-app-rmq
  namespace: dev1-manifest
  labels:
    app: rabbitmq
    tier: middleware
spec:
  containers:
    - name: rabbitmq
      image: rabbitmq:3-management
      ports:
        - containerPort: 5672
          name: amqp
        - containerPort: 15672
          name: management
          # http://localhost:15672/#/

---

apiVersion: v1
kind: Service
metadata:
  name: spring-app-rmq-nodeport-service
  namespace: dev1-manifest
spec:
  selector:
    app: rabbitmq
    tier: middleware
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  type: NodePort
